@@ -3,11 +3,11 @@ calculate.angles.radial <- function(v, tree, spread, total.angle) {
     node.ids <- c(root.node.id);
 
     total.angle <- total.angle * spread;
-    angles <- numeric(nrow(tree));
+    angles <- v$angle;
 
     while (length(node.ids) > 0) {
         # "Pops" next element in FIFO queue node.ids
-        current.node.id <- node.ids[1];
+        current.node.id <- as.numeric(node.ids[1]);
         node.ids <- node.ids[-1];
 
         parent.id <- tree$parent[tree$tip == current.node.id];
@@ -16,11 +16,17 @@ calculate.angles.radial <- function(v, tree, spread, total.angle) {
             tree$angle[tree$tip == current.node.id] <- 0;
             }
 
-        child.ids <- tree$tip[tree$parent == current.node.id & !is.na(tree$parent)];
+        child.ids <- as.numeric(
+            tree$tip[tree$parent == current.node.id & !is.na(tree$parent)]
+            );
         num.children <- length(child.ids);
 
         if (num.children > 0) {
-            parent.angle <- tree$angle[tree$tip == current.node.id];
+            parent.angle <- angles[current.node.id];
+            if (is.na(parent.angle) || length(parent.angle) == 0) {
+                parent.angle <- 0;
+                angles[current.node.id] <- parent.angle;
+                }
             child.weight <- assign.weight(current.node.id, v);
 
             start.angle <- parent.angle - (total.angle) * (num.children > 1) / 2;
@@ -29,8 +35,11 @@ calculate.angles.radial <- function(v, tree, spread, total.angle) {
 
             for (i in seq_along(child.ids)) {
                 child.id <- child.ids[i];
-                angle <- start.angle + (i - 1) * (angle.increment);
-                angles[tree$tip == child.id] <- angle;
+
+                if (is.na(angles[child.id])) {
+                    angle <- start.angle + (i - 1) * (angle.increment);
+                    angles[tree$tip == child.id] <- angle;
+                    }
                 }
 
             # Appending to end of queue for breadth-first traversal
@@ -38,20 +47,27 @@ calculate.angles.radial <- function(v, tree, spread, total.angle) {
             }
         }
 
-    angles <- override.angles(tree, v, angles);
     return(angles);
     }
 
 calculate.angles.fixed <- function(v, tree, fixed.angle) {
-    angles <- numeric(nrow(tree));
+    angles <- v$angle;
     node.ids <- c(v$id[[1]]);
 
     while (length(node.ids) > 0) {
         # "Pops" next element in FIFO queue node.ids
-        current.node.id <- node.ids[1];
+        current.node.id <- as.numeric(node.ids[1]);
         node.ids <- node.ids[-1];
 
-        child.ids <- tree$tip[tree$parent == current.node.id & !is.na(tree$parent)];
+        parent.angle <- angles[current.node.id];
+        if (is.na(parent.angle) || length(parent.angle) == 0) {
+            parent.angle <- 0;
+            angles[current.node.id] <- parent.angle;
+            }
+
+        child.ids <- as.numeric(
+            tree$tip[tree$parent == current.node.id & !is.na(tree$parent)]
+            );
         num.children <- length(child.ids);
         if (num.children > 0) {
             # Safe to hardcode temporarily. This will only ever apply to
@@ -60,12 +76,16 @@ calculate.angles.fixed <- function(v, tree, fixed.angle) {
             # In future, I would like to remove this fixed angle calculation entirely.
             # It would be ideal to handle all calculations in the same way, and
             # rely more on user defined spread and explicit angle overrides.
-            child.angles <- if (num.children == 1) c(0) else c(-1, 1) * fixed.angle;
+            child.angles <- (if (num.children == 1) c(0) else c(-1, 1)) * fixed.angle;
+            child.angles <- child.angles + parent.angle;
 
             for (i in seq_along(child.ids)) {
                 child.id <- child.ids[i];
-                angle <- child.angles[i];
-                angles[tree$tip == child.id] <- angle;
+
+                if (is.na(angles[child.id])) {
+                    angle <- child.angles[i];
+                    angles[tree$tip == child.id] <- angle;
+                    }
                 }
             }
 
@@ -73,7 +93,6 @@ calculate.angles.fixed <- function(v, tree, fixed.angle) {
         node.ids <- append(node.ids, child.ids);
         }
 
-    angles <- override.angles(tree, v, angles);
     return(angles);
     }
 
