@@ -9,6 +9,11 @@ CancerEvolutionVisualization 2.0.2 2023-12-15 (Dan Knight)
 UPDATE
 * Updated package metadata and README
 
+CancerEvolutionVisualization 2.0.2 2024-04-09 (Dan Knight)
+
+BUG
+* Fixed angle calculation bug where child angles do not follow
+  their parent angle, instead moving "downward" at 0 degrees.
 
 --------------------------------------------------------------------------
 CancerEvolutionVisualization 2.0.1 2023-11-17 (Helena Winata, Dan Knight)
